// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldArray add form item with values (x2) > remove 1 > add inner 0 (x1) > $values 1`] = `
Object {
  "parents": Array [
    Object {
      "id": 2,
      "inners": Array [
        Object {
          "id": 3,
          "username": "inner 0",
        },
      ],
      "username": "1",
    },
  ],
}
`;

exports[`FieldArray add form item with values (x2) > remove 1 > add inner 0 (x1) > render 1`] = `
<div
  class="formItems"
  role="formItems"
>
  <div
    class="formItem"
    role="formItem"
  >
    <div
      class="input-wrap"
      role="wrapper-for-input"
    >
      <label>
        Username
      </label>
      <input
        class="input"
        name="parents.0.username"
        placeholder="Username"
        role="textbox"
        value="1"
      />
    </div>
    <div
      class="input-wrap"
      role="wrapper-for-input"
    >
      <label>
        First name
      </label>
      <input
        class="input"
        name="parents.0.profile.firstName"
        placeholder="First name"
        role="textbox"
        value=""
      />
    </div>
    <div
      class="formItemsInner"
      role="formItemsInner"
    >
      <div
        class="formItem"
        role="formItemInner"
      >
        <div
          class="input-wrap"
          role="wrapper-for-input"
        >
          <label>
            Username
          </label>
          <input
            class="input"
            name="parents.0.inners.0.username"
            placeholder="Username"
            role="textbox"
            value="inner 0"
          />
        </div>
        <div
          class="input-wrap"
          role="wrapper-for-input"
        >
          <label>
            First name
          </label>
          <input
            class="input"
            name="parents.0.inners.0.profile.firstName"
            placeholder="First name"
            role="textbox"
            value=""
          />
        </div>
        <button
          type="button"
        >
          remove form item inner
        </button>
      </div>
      <button
        type="button"
      >
        add inner form item
      </button>
    </div>
    <button
      type="button"
    >
      remove form item
    </button>
  </div>
  <button
    type="button"
  >
    add form item with values
  </button>
</div>
`;

exports[`FieldArray add form item with values (x3) > $values 1`] = `
Object {
  "parents": Array [
    Object {
      "id": 1,
      "username": "0",
    },
    Object {
      "id": 2,
      "username": "1",
    },
    Object {
      "id": 3,
      "username": "2",
    },
  ],
}
`;

exports[`FieldArray add form item with values (x3) > add inner (x3) > $values 1`] = `
Object {
  "parents": Array [
    Object {
      "id": 1,
      "inners": Array [
        Object {
          "id": 4,
          "username": "inner 0",
        },
      ],
      "username": "0",
    },
    Object {
      "id": 2,
      "inners": Array [
        Object {
          "id": 5,
          "username": "inner 1",
        },
      ],
      "username": "1",
    },
    Object {
      "id": 3,
      "inners": Array [
        Object {
          "id": 6,
          "username": "inner 2",
        },
      ],
      "username": "2",
    },
  ],
}
`;

exports[`FieldArray add form item with values (x3) > add inner (x3) > remove form item 1 > $values 1`] = `
Object {
  "parents": Array [
    Object {
      "id": 1,
      "inners": Array [
        Object {
          "id": 4,
          "username": "inner 0",
        },
      ],
      "username": "0",
    },
    Object {
      "id": 3,
      "inners": Array [
        Object {
          "id": 6,
          "username": "inner 2",
        },
      ],
      "username": "2",
    },
  ],
}
`;

exports[`FieldArray add form item with values (x3) > add inner (x3) > remove form item 1 > render 1`] = `
<div
  class="formItems"
  role="formItems"
>
  <div
    class="formItem"
    role="formItem"
  >
    <div
      class="input-wrap"
      role="wrapper-for-input"
    >
      <label>
        Username
      </label>
      <input
        class="input"
        name="parents.0.username"
        placeholder="Username"
        role="textbox"
        value="0"
      />
    </div>
    <div
      class="input-wrap"
      role="wrapper-for-input"
    >
      <label>
        First name
      </label>
      <input
        class="input"
        name="parents.0.profile.firstName"
        placeholder="First name"
        role="textbox"
        value=""
      />
    </div>
    <div
      class="formItemsInner"
      role="formItemsInner"
    >
      <div
        class="formItem"
        role="formItemInner"
      >
        <div
          class="input-wrap"
          role="wrapper-for-input"
        >
          <label>
            Username
          </label>
          <input
            class="input"
            name="parents.0.inners.0.username"
            placeholder="Username"
            role="textbox"
            value="inner 0"
          />
        </div>
        <div
          class="input-wrap"
          role="wrapper-for-input"
        >
          <label>
            First name
          </label>
          <input
            class="input"
            name="parents.0.inners.0.profile.firstName"
            placeholder="First name"
            role="textbox"
            value=""
          />
        </div>
        <button
          type="button"
        >
          remove form item inner
        </button>
      </div>
      <button
        type="button"
      >
        add inner form item
      </button>
    </div>
    <button
      type="button"
    >
      remove form item
    </button>
  </div>
  <div
    class="formItem"
    role="formItem"
  >
    <div
      class="input-wrap"
      role="wrapper-for-input"
    >
      <label>
        Username
      </label>
      <input
        class="input"
        name="parents.1.username"
        placeholder="Username"
        role="textbox"
        value="2"
      />
    </div>
    <div
      class="input-wrap"
      role="wrapper-for-input"
    >
      <label>
        First name
      </label>
      <input
        class="input"
        name="parents.1.profile.firstName"
        placeholder="First name"
        role="textbox"
        value=""
      />
    </div>
    <div
      class="formItemsInner"
      role="formItemsInner"
    >
      <div
        class="formItem"
        role="formItemInner"
      >
        <div
          class="input-wrap"
          role="wrapper-for-input"
        >
          <label>
            Username
          </label>
          <input
            class="input"
            name="parents.1.inners.0.username"
            placeholder="Username"
            role="textbox"
            value="inner 2"
          />
        </div>
        <div
          class="input-wrap"
          role="wrapper-for-input"
        >
          <label>
            First name
          </label>
          <input
            class="input"
            name="parents.1.inners.0.profile.firstName"
            placeholder="First name"
            role="textbox"
            value=""
          />
        </div>
        <button
          type="button"
        >
          remove form item inner
        </button>
      </div>
      <button
        type="button"
      >
        add inner form item
      </button>
    </div>
    <button
      type="button"
    >
      remove form item
    </button>
  </div>
  <button
    type="button"
  >
    add form item with values
  </button>
</div>
`;

exports[`FieldArray add form item with values (x3) > add inner (x3) > render 1`] = `
<div
  class="formItems"
  role="formItems"
>
  <div
    class="formItem"
    role="formItem"
  >
    <div
      class="input-wrap"
      role="wrapper-for-input"
    >
      <label>
        Username
      </label>
      <input
        class="input"
        name="parents.0.username"
        placeholder="Username"
        role="textbox"
        value="0"
      />
    </div>
    <div
      class="input-wrap"
      role="wrapper-for-input"
    >
      <label>
        First name
      </label>
      <input
        class="input"
        name="parents.0.profile.firstName"
        placeholder="First name"
        role="textbox"
        value=""
      />
    </div>
    <div
      class="formItemsInner"
      role="formItemsInner"
    >
      <div
        class="formItem"
        role="formItemInner"
      >
        <div
          class="input-wrap"
          role="wrapper-for-input"
        >
          <label>
            Username
          </label>
          <input
            class="input"
            name="parents.0.inners.0.username"
            placeholder="Username"
            role="textbox"
            value="inner 0"
          />
        </div>
        <div
          class="input-wrap"
          role="wrapper-for-input"
        >
          <label>
            First name
          </label>
          <input
            class="input"
            name="parents.0.inners.0.profile.firstName"
            placeholder="First name"
            role="textbox"
            value=""
          />
        </div>
        <button
          type="button"
        >
          remove form item inner
        </button>
      </div>
      <button
        type="button"
      >
        add inner form item
      </button>
    </div>
    <button
      type="button"
    >
      remove form item
    </button>
  </div>
  <div
    class="formItem"
    role="formItem"
  >
    <div
      class="input-wrap"
      role="wrapper-for-input"
    >
      <label>
        Username
      </label>
      <input
        class="input"
        name="parents.1.username"
        placeholder="Username"
        role="textbox"
        value="1"
      />
    </div>
    <div
      class="input-wrap"
      role="wrapper-for-input"
    >
      <label>
        First name
      </label>
      <input
        class="input"
        name="parents.1.profile.firstName"
        placeholder="First name"
        role="textbox"
        value=""
      />
    </div>
    <div
      class="formItemsInner"
      role="formItemsInner"
    >
      <div
        class="formItem"
        role="formItemInner"
      >
        <div
          class="input-wrap"
          role="wrapper-for-input"
        >
          <label>
            Username
          </label>
          <input
            class="input"
            name="parents.1.inners.0.username"
            placeholder="Username"
            role="textbox"
            value="inner 1"
          />
        </div>
        <div
          class="input-wrap"
          role="wrapper-for-input"
        >
          <label>
            First name
          </label>
          <input
            class="input"
            name="parents.1.inners.0.profile.firstName"
            placeholder="First name"
            role="textbox"
            value=""
          />
        </div>
        <button
          type="button"
        >
          remove form item inner
        </button>
      </div>
      <button
        type="button"
      >
        add inner form item
      </button>
    </div>
    <button
      type="button"
    >
      remove form item
    </button>
  </div>
  <div
    class="formItem"
    role="formItem"
  >
    <div
      class="input-wrap"
      role="wrapper-for-input"
    >
      <label>
        Username
      </label>
      <input
        class="input"
        name="parents.2.username"
        placeholder="Username"
        role="textbox"
        value="2"
      />
    </div>
    <div
      class="input-wrap"
      role="wrapper-for-input"
    >
      <label>
        First name
      </label>
      <input
        class="input"
        name="parents.2.profile.firstName"
        placeholder="First name"
        role="textbox"
        value=""
      />
    </div>
    <div
      class="formItemsInner"
      role="formItemsInner"
    >
      <div
        class="formItem"
        role="formItemInner"
      >
        <div
          class="input-wrap"
          role="wrapper-for-input"
        >
          <label>
            Username
          </label>
          <input
            class="input"
            name="parents.2.inners.0.username"
            placeholder="Username"
            role="textbox"
            value="inner 2"
          />
        </div>
        <div
          class="input-wrap"
          role="wrapper-for-input"
        >
          <label>
            First name
          </label>
          <input
            class="input"
            name="parents.2.inners.0.profile.firstName"
            placeholder="First name"
            role="textbox"
            value=""
          />
        </div>
        <button
          type="button"
        >
          remove form item inner
        </button>
      </div>
      <button
        type="button"
      >
        add inner form item
      </button>
    </div>
    <button
      type="button"
    >
      remove form item
    </button>
  </div>
  <button
    type="button"
  >
    add form item with values
  </button>
</div>
`;

exports[`FieldArray add form item with values (x3) > remove(1) > $fieldsInline 1`] = `
Object {
  "parents.0.profile.firstName": Object {
    "_type": "fieldMeta",
    "active": false,
    "blurred": false,
    "blurredAfterOuterError": false,
    "changed": false,
    "changedAfterOuterError": false,
    "touched": false,
    "touchedAfterOuterError": false,
    "validate": [Function],
  },
  "parents.0.username": Object {
    "_type": "fieldMeta",
    "active": false,
    "blurred": false,
    "blurredAfterOuterError": false,
    "changed": false,
    "changedAfterOuterError": false,
    "touched": false,
    "touchedAfterOuterError": false,
    "validate": [Function],
  },
  "parents.1.profile.firstName": Object {
    "_type": "fieldMeta",
    "active": false,
    "blurred": false,
    "blurredAfterOuterError": false,
    "changed": false,
    "changedAfterOuterError": false,
    "touched": false,
    "touchedAfterOuterError": false,
    "validate": [Function],
  },
  "parents.1.username": Object {
    "_type": "fieldMeta",
    "active": false,
    "blurred": false,
    "blurredAfterOuterError": false,
    "changed": false,
    "changedAfterOuterError": false,
    "touched": false,
    "touchedAfterOuterError": false,
    "validate": [Function],
  },
}
`;

exports[`FieldArray add form item with values (x3) > remove(1) > $values 1`] = `
Object {
  "parents": Array [
    Object {
      "id": 1,
      "username": "0",
    },
    Object {
      "id": 3,
      "username": "2",
    },
  ],
}
`;

exports[`FieldArray add form item with values > $values 1`] = `
Object {
  "parents": Array [
    Object {
      "id": 1,
      "profile": Object {
        "firstName": "Timofey",
      },
      "username": "gto",
    },
  ],
}
`;

exports[`FieldArray add form item with values > render 1`] = `
Array [
  <div
    class="formItems"
    role="formItems"
  >
    <div
      class="formItem"
      role="formItem"
    >
      <div
        class="input-wrap"
        role="wrapper-for-input"
      >
        <label>
          Username
        </label>
        <input
          class="input"
          name="parents.0.username"
          placeholder="Username"
          role="textbox"
          value="gto"
        />
      </div>
      <div
        class="input-wrap"
        role="wrapper-for-input"
      >
        <label>
          First name
        </label>
        <input
          class="input"
          name="parents.0.profile.firstName"
          placeholder="First name"
          role="textbox"
          value="Timofey"
        />
      </div>
      <div
        class="formItemsInner"
        role="formItemsInner"
      >
        <button
          type="button"
        >
          add inner form item
        </button>
      </div>
      <button
        type="button"
      >
        remove form item
      </button>
    </div>
    <button
      type="button"
    >
      add form item with values
    </button>
  </div>,
]
`;

exports[`FieldArray render 1`] = `
Array [
  <div
    class="formItems"
    role="formItems"
  >
    <button
      type="button"
    >
      add form item with values
    </button>
  </div>,
]
`;
